collapse menu if clicked on overlay and fix footer

--- a/gameOfThrones/src/app/footer/footer.component.scss
+++ b/gameOfThrones/src/app/footer/footer.component.scss
@@ -14,7 +14,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 30px auto;
     padding: 0 20px;
 }
   
